--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,7 @@
 .container{
     display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 .menu{
@@ -8,6 +10,25 @@
     align-items: center;
     height: 90px;
     width: 100%;
-    background-color: rgb(0, 0, 0);
+    background-color: #000000;
     color: #ffffff;
+}
+
+.panel{
+    margin-top: 1rem;
+    border: 1px solid #ff0000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.square{
+    height: 150px;
+    width: 150px;
+    border: 1px solid #000000;
+    background-color: #7fffd4;
+}
+
+.enemy{
+    background-color: #ff0000;
 }
