--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,7 +1,8 @@
 .container{
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
+    background-image: url("../images/wall.png");
 }
 
 .menu{
@@ -12,11 +13,11 @@
     width: 100%;
     background-color: #000000;
     color: #ffffff;
+    border-bottom: 5px solid #ffd700;
 }
 
 .panel{
     margin-top: 1rem;
-    border: 1px solid #ff0000;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,9 +27,16 @@
     height: 150px;
     width: 150px;
     border: 1px solid #000000;
-    background-color: #7fffd4;
+    background-color: #1aeaa5;
 }
 
 .enemy{
-    background-color: #ff0000;
+    background-image: url("../images/ralph.png");
+    background-size: cover;
+}
+
+.menu-lives{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
