pegando elementos especificos do css

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -40,3 +40,8 @@
     align-items: center;
     justify-content: center;
 }
+
+.menu-time h2:nth-child(2),
+.menu-score h2:nth-child(2){
+    margin-top: 1rem;
+}
